* add a hosted service to cache information from Code Project API. * add wrapper classes for classes related to HttpWebRequest for unit tests. * add wrapper classes for classes related to Html Agility Pack for unit tests. * add integration tests for the hosted service. * get connection strings from environment variables. * update react-scripts package version from 3.2.0 to 3.4.0. * update node-sass package version from 4.13.0 to 4.13.1.

--- a/YCodeLab/appsettings.Development.json
+++ b/YCodeLab/appsettings.Development.json
@@ -3,7 +3,6 @@
     "MinimumLevel": "Debug"
   },
   "ConnectionStrings": {
-    "ycodelab-db": "postgresql://postgres:postgres@localhost:6543/ycodelab",
-    "ycodelab-db-backup": "Server=localhost;Port=6543;User Id=postgres;Password=postgres;Database=ycodelab;pooling=true;maxpoolsize=30;"
+    "ycodelab-db": "Server=localhost;Port=6543;User Id=postgres;Password=postgres;Database=ycodelab;pooling=true;maxpoolsize=30;"
   }
 }
