--- a/YCodeLabDBFactory/appsettings.Release.json
+++ b/YCodeLabDBFactory/appsettings.Release.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "ycodelab-db": "Server=raja.db.elephantsql.com;Port=5432;User Id=gkyzvvhy;Password=;Database=g;pooling=true;maxpoolsize=30;"
+    "ycodelab-db": "Server=salt.db.elephantsql.com;Port=5432;User Id=wmotojho;Password=oHGsa3T2BTjAcf0CHvP_sDDHsm2RZpQr;Database=wmotojho;pooling=true;maxpoolsize=30;"
   }
 }
