--- a/YCodeLab/ClientApp/package.json
+++ b/YCodeLab/ClientApp/package.json
@@ -8,14 +8,14 @@
     "history": "4.7.2",
     "jquery": "^3.4.1",
     "merge": "1.2.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.16.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.4.0",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
@@ -34,12 +34,12 @@
     "@types/reactstrap": "^8.0.5",
     "@types/redux-actions": "^2.6.1",
     "cross-env": "^6.0.3",
-    "eslint": "^6.5.1",
     "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.1.2",
+    "npm-watch": "^0.6.0",
     "typescript-eslint-parser": "^22.0.0"
   },
   "scripts": {
