--- a/YCodeLab/Properties/launchSettings.json
+++ b/YCodeLab/Properties/launchSettings.json
@@ -20,6 +20,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ADMIN_TOKEN": "test-admin",
+        "Y_CODE_LAB_DB": "Server=localhost;Port=6543;User Id=postgres;Password=postgres;Database=ycodelab;pooling=true;maxpoolsize=30;",
+        "CPP": "test-admin",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:8080"
