--- a/YCodeLab/appsettings.json
+++ b/YCodeLab/appsettings.json
@@ -25,8 +25,7 @@
     }
   },
   "ConnectionStrings": {
-    "ycodelab-db": "postgresql://postgres:postgres@localhost:6543/ycodelab",
-    "ycodelab-db-backup": "Server=localhost;Port=6543;User Id=postgres;Password=postgres;Database=ycodelab;pooling=true;maxpoolsize=30;"
+    "ycodelab-db": ""
   },
   "AllowedHosts": "*"
 }
