--- a/YCodeLabDBTest/YCodeLabDBTest.csproj
+++ b/YCodeLabDBTest/YCodeLabDBTest.csproj
@@ -24,10 +24,15 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\YCodeLabDB\YCodeLabDB.csproj" />
+    <ProjectReference Include="..\YCodeLabDBFactory\YCodeLabDBFactory.csproj" />
+    <ProjectReference Include="..\DevDBSetup\DevDBSetup.csproj" />
   </ItemGroup>
 
 </Project>
