* add and update contents in the footer to make it alternate my profile page. * remove my profile page. * rename ThirdPartyLibDevs page to ContributionsIn3rdParty page. * renamed WebAppDevs page to MyProjects page. * add code in App.tsx to scroll to top at every page transition.

--- a/YCodeLab/Properties/launchSettings.json
+++ b/YCodeLab/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ADMIN_TOKEN": "test-admin",
         "Y_CODE_LAB_DB": "Server=localhost;Port=6543;User Id=postgres;Password=postgres;Database=ycodelab;pooling=true;maxpoolsize=30;",
-        "CPP": "test-admin",
+        "CPP": "maido2134",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:8080"
