--- a/YCodeLab/ClientApp/package.json
+++ b/YCodeLab/ClientApp/package.json
@@ -3,24 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "connected-react-router": "^6.5.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.8.0",
     "history": "4.7.2",
-    "jquery": "^3.4.1",
+    "install": "^0.13.0",
+    "jquery": "^3.5.0",
     "merge": "1.2.1",
     "node-sass": "^4.13.1",
-    "popper.js": "^1.16.0",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.1.0",
-    "react-router-dom": "^5.1.0",
-    "react-scripts": "^3.4.0",
-    "reactstrap": "^8.0.0",
+    "npm": "^6.14.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-thunk": "2.3.0",
-    "typescript": "^3.6.0"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/history": "4.7.2",
@@ -31,9 +35,11 @@
     "@types/react-redux": "^7.1.4",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.0",
-    "@types/reactstrap": "^8.0.5",
+    "@types/reactstrap": "^8.4.2",
     "@types/redux-actions": "^2.6.1",
     "cross-env": "^6.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.1",
     "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -45,7 +51,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/*.ts ./src/**/*.tsx"
   },
