--- a/YCodeLab/ClientApp/package.json
+++ b/YCodeLab/ClientApp/package.json
@@ -27,19 +27,21 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.10",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.2",
     "@types/jest": "23.3.11",
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
-    "@types/react-redux": "^7.1.4",
-    "@types/react-router": "^5.1.2",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router": "^5.1.5",
+    "@types/react-router-dom": "^5.1.4",
     "@types/reactstrap": "^8.4.2",
     "@types/redux-actions": "^2.6.1",
     "cross-env": "^6.0.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-15": "^1.4.1",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
