--- a/YCodeLab/ClientApp/package.json
+++ b/YCodeLab/ClientApp/package.json
@@ -21,7 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-thunk": "2.3.0",
     "typescript": "^3.8.3"
@@ -30,7 +30,7 @@
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.2",
-    "@types/jest": "23.3.11",
+    "@types/jest": "24.9.0",
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
@@ -47,6 +47,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.1.2",
+    "jest-fetch-mock": "^3.0.2",
     "npm-watch": "^0.6.0",
     "typescript-eslint-parser": "^22.0.0"
   },
