add a content about React-Redux Stethoscope project to My Projects page. renew layout thoroughly. add table of contents in My Projects and 3rd Party Contribution page.

--- a/YCodeLabDBFactory/appsettings.Release.json
+++ b/YCodeLabDBFactory/appsettings.Release.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "ycodelab-db": "Server=salt.db.elephantsql.com;Port=5432;User Id=wmotojho;Password=oHGsa3T2BTjAcf0CHvP_sDDHsm2RZpQr;Database=wmotojho;pooling=true;maxpoolsize=30;"
+    "ycodelab-db": "Server=topsy.db.elephantsql.com;Port=5432;User Id=iixjuyan;Password=dAvgcJZFOcXRVxcrYyKrCwC33o1pj0PY;Database=iixjuyan;pooling=true;maxpoolsize=30;"
   }
 }
