--- a/YCodeLab/ClientApp/package.json
+++ b/YCodeLab/ClientApp/package.json
@@ -12,13 +12,14 @@
     "install": "^0.13.0",
     "jquery": "^3.5.0",
     "merge": "1.2.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "npm": "^6.14.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
@@ -37,6 +38,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-router-hash-link": "^1.2.1",
     "@types/reactstrap": "^8.4.2",
     "@types/redux-actions": "^2.6.1",
     "cross-env": "^6.0.3",
