--- a/YCodeLab/ClientApp/package.json
+++ b/YCodeLab/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/uuid": "^7.0.3",
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.8.0",
     "history": "4.7.2",
@@ -25,7 +26,8 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-thunk": "2.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.10",
