--- a/YCodeLab/ClientApp/package.json
+++ b/YCodeLab/ClientApp/package.json
@@ -3,57 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/uuid": "^7.0.3",
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^14.0.0",
+    "@types/uuid": "^8.0.0",
     "bootstrap": "^4.4.1",
-    "connected-react-router": "^6.8.0",
     "history": "4.7.2",
     "install": "^0.13.0",
     "jquery": "^3.5.0",
     "merge": "1.2.1",
-    "node-sass": "^4.14.1",
-    "npm": "^6.14.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-router-hash-link": "^1.2.2",
-    "react-scripts": "^3.4.1",
+    "node-sass": "^7.0.0",
+    "npm": "^8.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.4.1",
-    "redux": "^4.0.5",
+    "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
-    "redux-thunk": "2.3.0",
-    "typescript": "^3.8.3",
+    "redux-thunk": "^2.4.1",
     "uuid": "^8.0.0"
-  },
-  "devDependencies": {
-    "@types/enzyme": "^3.1.10",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/history": "4.7.2",
-    "@types/jest": "24.9.0",
-    "@types/node": "^12.11.1",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router": "^5.1.5",
-    "@types/react-router-dom": "^5.1.4",
-    "@types/react-router-hash-link": "^1.2.1",
-    "@types/reactstrap": "^8.4.2",
-    "@types/redux-actions": "^2.6.1",
-    "cross-env": "^6.0.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint-plugin-flowtype": "^4.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.1.2",
-    "jest-fetch-mock": "^3.0.2",
-    "npm-watch": "^0.6.0",
-    "typescript-eslint-parser": "^22.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -70,5 +41,30 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/history": "^4.7.11",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/reactstrap": "^8.7.2",
+    "@types/redux-actions": "^2.6.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "cross-env": "^7.0.3",
+    "enzyme": "^3.11.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-fetch-mock": "^3.0.3",
+    "npm-watch": "^0.11.0",
+    "typescript": "^4.7.4"
+  }
 }
