--- a/YCodeLabDB/YCodeLabDB.csproj
+++ b/YCodeLabDB/YCodeLabDB.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>YCodeLab.DB</RootNamespace>
     <AssemblyName>YCodeLab.DB</AssemblyName>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
