--- a/YCodeLabDB/YCodeLabDB.csproj
+++ b/YCodeLabDB/YCodeLabDB.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>YCodeLab.DB</RootNamespace>
     <AssemblyName>YCodeLab.DB</AssemblyName>
     <Nullable>enable</Nullable>
@@ -9,16 +9,8 @@
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-<PrivateAssets>all</PrivateAssets>
-</PackageReference>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.1" />
-    <PackageReference Include="Npgsql" Version="4.1.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resume\" />
-    <Folder Include="Messaging\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Migrations\20190929082026_v0.1.Designer.cs" />
